--- a/codelogin.html
+++ b/codelogin.html
@@ -7,13 +7,14 @@
     <STYLE>
         
         .D1{
-
+display:flex;
             background:url('https://wallpapercave.com/wp/4SNA6vL.jpg')no-repeat;border:2px solid white;color:white;
             width: 100%;
             FLOAT:RIGHT;
 
         }
         .D2{
+            display:flex;
             background:url('https://wallpapercave.com/wp/4SNA6vL.jpg')repeat ;border:2px solid white;color: ORANGE;
             width: 100%;
             FLOAT:RIGHT;
