--- a/codelogin.html
+++ b/codelogin.html
@@ -8,6 +8,7 @@
         
         .D1{
 display:flex;
+            flex-direction:row;
             background:url('https://wallpapercave.com/wp/4SNA6vL.jpg')no-repeat;border:2px solid white;color:white;
             width: 100%;
             FLOAT:RIGHT;
@@ -15,6 +16,7 @@ display:flex;
         }
         .D2{
             display:flex;
+            flex-direction:row;
             background:url('https://wallpapercave.com/wp/4SNA6vL.jpg')repeat ;border:2px solid white;color: ORANGE;
             width: 100%;
             FLOAT:RIGHT;
